@@ -12,6 +12,9 @@ What's New in Python 2.7 alpha 4?
 Core and Builtins
 -----------------
 
+- Issue #6902: Fix problem with built-in types format incorrectly with
+  0 padding.
+
 - Issue #2560: remove an unnecessary 'for' loop from my_fgets() in
   Parser/myreadline.c.
 
